Add transposition range limits to score